# igor

./: .env.example  .flake8  .gitignore  README.md  diff  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
igor/: client.py  config.toml  event.py  hub.py  logging_config.py  main.py  response.py
igor/channels/: __init__.py  base_channel.py  console.py  discord.py  telegram.py
igor/reactors/: __init__.py  base_reactor.py  catpic.py  echoreactor.py  fortune.py  help.py  sentimentreactor.py
tests/: conftest.py  mock_channel.py  test_console.py  test_discord.py  test_echoreactor.py
tests/unit/: test_channel.py  test_console.py  test_hub.py  test_reactor.py
